[gd_scene load_steps=5 format=3 uid="uid://d2yhro4psj7do"]

[ext_resource type="Script" path="res://main_menu.gd" id="1_hlcug"]
[ext_resource type="Texture2D" uid="uid://die06k11lyxus" path="res://assets/fondos/polo3.jpg" id="2_3jgat"]
[ext_resource type="PackedScene" uid="uid://dppy2wnymlho5" path="res://main_menu_player_anim.tscn" id="2_b75xe"]
[ext_resource type="FontFile" uid="uid://d4kiqrgdxtgln" path="res://assets/fonts/bubble-bobble-font/BubbleBobble-MVpLp.otf" id="4_28pov"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_hlcug")

[node name="Polo3" type="Sprite2D" parent="."]
position = Vector2(642, 328)
texture = ExtResource("2_3jgat")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -36.0
offset_top = 200.0
offset_right = 35.0
offset_bottom = 50.5
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
focus_mode = 2

[node name="PlayButton" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
focus_neighbor_bottom = NodePath("../RecordsButton")
focus_next = NodePath("../RecordsButton")
text = "Jugar"

[node name="RecordsButton" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
focus_neighbor_top = NodePath("../PlayButton")
focus_neighbor_bottom = NodePath("../QuitButton")
focus_next = NodePath("../QuitButton")
focus_previous = NodePath("../PlayButton")
text = "Records"

[node name="QuitButton" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
focus_neighbor_top = NodePath("../RecordsButton")
focus_previous = NodePath("../RecordsButton")
text = "Salir"

[node name="MainMenuPlayerAnim" parent="." instance=ExtResource("2_b75xe")]
position = Vector2(257, 516)

[node name="Label" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -520.0
offset_right = -170.0
offset_bottom = 56.0
grow_horizontal = 2
scale = Vector2(3, 3)
theme_override_colors/font_color = Color(0.54902, 0.745098, 0.87451, 1)
theme_override_fonts/font = ExtResource("4_28pov")
theme_override_font_sizes/font_size = 50
text = "Life is Bubblance"
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="pressed" from="MarginContainer/VBoxContainer/PlayButton" to="." method="_on_play_button_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/RecordsButton" to="." method="_on_records_button_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/QuitButton" to="." method="_on_quit_button_pressed"]
